fix bottom margin on mobile

--- a/frontend/static/app.css
+++ b/frontend/static/app.css
@@ -100,6 +100,10 @@ h2 {
     margin: 0 0 10px 0;
 }
 
+.app-container {
+    margin-bottom: 80px;
+}
+
 /* ============================================================ */
 /* Top Navigation */
 /* ============================================================ */
